# gaussian-maker

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.bat
gaussian_maker/: __init__.py  cli.py  exporter.py  pipeline.py  sfm.py  trainer.py  video_processor.py
gaussian_maker/utils/: __init__.py  config.py  device.py
